Fixed overlapping on landing page

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     margin: 0;
     font-family: 'Lazydog', Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    background-color: #FFBD59;
 }
 
 nav {
@@ -176,11 +177,11 @@ main {
 }
 
 .tagline {
-    margin-top: -130px;
     font-weight: bold;
 }
 .tagline-box {
     height: 50vh;
+    margin-top: -130px;
     /* background-image: linear-gradient(skyblue, #ffbd59); */
 }
 
@@ -188,7 +189,7 @@ section.two {
     /* height: 130vh; */
     position: relative;
     padding-bottom: 100px;
-    background-color: #ffbd59;
+    /* background-color: #ffbd59; */
 }
 
 .two-box {
